tests/valid_programs/tuples/tuples_nested.duck
use go "fmt";

fn main() {
    let a: ((),) = ((),);
    let b: ((),(),) = ((),(),);
    let c: (((),),(),) = (((),),(),);
    let d: ((((),),),(),) = ((((),),),(),);

    go {
        fmt.Println(a)
        fmt.Println(b)
        fmt.Println(c)
        fmt.Println(d)
    }
}
