tests/errors/references/struct_nested_mut_method_call_mut_ref.duck
struct A = {
} impl {
    mut fn m() {}
};

struct B = {
    a: &mut A,
} impl {
};

fn main() {
    const b = &B { a: &mut A {} };
    b.a.m();
}
